# rtl-sdr

./: .coderabbit.yaml  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  SECURITY.md  actionlint.yaml  build.rs  deny.toml  sonar-project.properties
crates/sdr-acars/: Cargo.toml
crates/sdr-acars/src/: channel.rs  crc.rs  frame.rs  json.rs  label.rs  label_parsers.rs  lib.rs  msk.rs  reassembly.rs  syndrom.rs
crates/sdr-acars/tests/: e2e_acarsdec_compat.rs  multichannel_synthetic.rs
crates/sdr-acars/tests/data/: README.md
crates/sdr-acars/tests/fixtures/: REGENERATE.md
crates/sdr-config/: Cargo.toml
crates/sdr-config/src/: keyring_store.rs  lib.rs
crates/sdr-core/: Cargo.toml
crates/sdr-core/src/: acars_airband_lock.rs  acars_output.rs  controller.rs  engine.rs  fft_buffer.rs  lib.rs  messages.rs  sink_slot.rs
crates/sdr-core/tests/: acars_decode_tap.rs  acars_pipeline_integration.rs
crates/sdr-dsp/: Cargo.toml
crates/sdr-dsp/benches/: colormap.rs  detection.rs  fft.rs  fft_gpu.rs  fft_simd_compare.rs  fir.rs  lrpt_demod.rs  multirate.rs
crates/sdr-dsp/examples/: apt_decode_wav.rs
crates/sdr-dsp/src/: apt.rs  channel.rs  convert.rs  correction.rs  decim_taps.rs  demod.rs  fft.rs  filter.rs  gpu_fft.rs  gpu_fft.wgsl  lib.rs  loops.rs  math.rs  multirate.rs  noise.rs  propagation.rs  stereo.rs  taps.rs  tone_detect.rs  voice_squelch.rs  window.rs
crates/sdr-dsp/src/lrpt/: costas.rs  meteor_agc.rs  meteor_pll.rs  mod.rs  rrc_filter.rs  slicer.rs  timing.rs
crates/sdr-dsp/tests/: apt_integration.rs
crates/sdr-dsp/tests/data/: README.md
crates/sdr-ffi/: Cargo.toml  cbindgen.toml
crates/sdr-ffi/src/: audio_tap.rs  command.rs  config.rs  enumerate.rs  error.rs  event.rs  fft.rs  handle.rs  lib.rs  lifecycle.rs  radioreference.rs  rtltcp_discovery.rs  rtltcp_server.rs
crates/sdr-lrpt/: Cargo.toml
crates/sdr-lrpt/benches/: fec.rs
crates/sdr-lrpt/proptest-regressions/fec/: viterbi.txt
crates/sdr-lrpt/src/: lib.rs
crates/sdr-lrpt/src/ccsds/: demux.rs  mod.rs  mpdu.rs  vcdu.rs
crates/sdr-lrpt/src/fec/: chain.rs  derand.rs  mod.rs  reed_solomon.rs  soft_sync.rs  sync.rs  viterbi.rs
crates/sdr-lrpt/src/image/: composite.rs  jpeg.rs  mod.rs  png_export.rs
crates/sdr-lrpt/tests/: golden_regression.rs
crates/sdr-lrpt/tests/fixtures/: REGENERATE_GOLDENS.md
crates/sdr-pipeline/: Cargo.toml
crates/sdr-pipeline/src/: block.rs  chain.rs  iq_frontend.rs  lib.rs  sink_manager.rs  source_manager.rs  splitter.rs  stream.rs  vfo_manager.rs
crates/sdr-radio/: Cargo.toml
crates/sdr-radio/src/: af_chain.rs  apt_image.rs  apt_telemetry.rs  if_chain.rs  lib.rs  lrpt_decoder.rs  lrpt_image.rs  sstv_image.rs
crates/sdr-radio/src/demod/: am.rs  cw.rs  dsb.rs  lrpt.rs  lsb.rs  mod.rs  nfm.rs  raw.rs  usb.rs  wfm.rs
crates/sdr-radio/tests/: pipeline_test.rs
crates/sdr-radioreference/: Cargo.toml
crates/sdr-radioreference/src/: lib.rs  mode_map.rs  soap.rs  types.rs
crates/sdr-rtlsdr/: Cargo.toml
crates/sdr-rtlsdr/src/: constants.rs  device.rs  error.rs  lib.rs  reg.rs  usb.rs
crates/sdr-rtlsdr/src/device/: builder.rs  eeprom.rs  enumerate.rs  frequency.rs  gain.rs  mod.rs  reader.rs  sampling.rs  streaming.rs  streaming_async_std.rs  streaming_smol.rs  streaming_tokio.rs
crates/sdr-rtlsdr/src/tuner/: e4k.rs  fc0012.rs  fc0013.rs  fc2580.rs  mod.rs
crates/sdr-rtlsdr/src/tuner/r82xx/: constants.rs  i2c.rs  mod.rs  pll.rs
crates/sdr-rtlsdr/tests/: live_streaming.rs
crates/sdr-rtltcp-discovery/: Cargo.toml
crates/sdr-rtltcp-discovery/src/: advertiser.rs  browser.rs  error.rs  lib.rs  txt.rs
crates/sdr-sat/: Cargo.toml
crates/sdr-sat/src/: elevation.rs  lib.rs  passes.rs  postal_lookup.rs  sgp4_core.rs  tle_cache.rs
crates/sdr-scanner/: Cargo.toml
crates/sdr-scanner/src/: channel.rs  commands.rs  events.rs  lib.rs  scanner.rs  state.rs
crates/sdr-server-rtltcp/: Cargo.toml
crates/sdr-server-rtltcp/src/: auth.rs  broadcaster.rs  codec.rs  dispatch.rs  error.rs  extension.rs  lib.rs  protocol.rs  server.rs
crates/sdr-server-rtltcp/tests/: multi_client_fanout.rs
crates/sdr-sink-audio/: Cargo.toml
crates/sdr-sink-audio/src/: coreaudio_impl.rs  lib.rs  pw_impl.rs  ring.rs  stub_impl.rs
crates/sdr-source-file/: Cargo.toml
crates/sdr-source-file/src/: lib.rs
crates/sdr-source-network/: Cargo.toml
crates/sdr-source-network/src/: lib.rs  rtl_tcp.rs
crates/sdr-source-rtlsdr/: Cargo.toml
crates/sdr-source-rtlsdr/src/: lib.rs
crates/sdr-splash-gtk/: Cargo.toml
crates/sdr-splash-gtk/src/: lib.rs
crates/sdr-transcription/: Cargo.toml
crates/sdr-transcription/src/: backend.rs  denoise.rs  init_event.rs  lib.rs  model.rs  resampler.rs  sherpa_model.rs  util.rs  vad.rs  worker.rs
crates/sdr-transcription/src/backends/: earshot_vad.rs  mock.rs  mod.rs  sherpa.rs  whisper.rs
crates/sdr-transcription/tests/: sherpa_uninitialized.rs
crates/sdr-tray/: Cargo.toml
crates/sdr-tray/src/: icon.rs  lib.rs
crates/sdr-ui/: Cargo.toml
crates/sdr-ui/benches/: waterfall_push_line.rs
crates/sdr-ui/src/: acars_config.rs  acars_viewer.rs  antenna.rs  app.rs  apt_viewer.rs  autostart.rs  css.rs  doppler_tracker.rs  dsp_controller.rs  lib.rs  lrpt_viewer.rs  messages.rs  notify.rs  shortcuts.rs  sstv_viewer.rs  state.rs  status_bar.rs  ui_helpers.rs  viewer.rs  wav_writer.rs  window.rs
crates/sdr-ui/src/header/: demod_selector.rs  frequency_selector.rs  mod.rs
crates/sdr-ui/src/preferences/: accounts_page.rs  general_page.rs  mod.rs
crates/sdr-ui/src/radioreference/: frequency_list.rs  mod.rs
crates/sdr-ui/src/sidebar/: activity_bar.rs  audio_panel.rs  aviation_panel.rs  bookmarks_panel.rs  display_panel.rs  general_panel.rs  mod.rs  navigation_panel.rs  radio_panel.rs  satellites_notify.rs  satellites_panel.rs  satellites_recorder.rs  scanner_panel.rs  server_panel.rs  source_panel.rs  transcript_panel.rs
crates/sdr-ui/src/spectrum/: colormap.rs  fft_plot.rs  frequency_axis.rs  gl_renderer.rs  mod.rs  signal_history.rs  vfo_overlay.rs  waterfall.rs
crates/sdr-ui/tests/: close_to_tray_config_round_trip.rs
(+157 files in other folders)
