[package]
name = "sdr"
version = "0.1.0"
description = "Software-defined radio application — Rust port of SDR++"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Cross-platform engine deps. The `sdr` binary itself is currently
# Linux-only (it links the GTK frontend), but we keep the engine deps
# unconditional so the workspace dep graph stays consistent across
# platforms and `cargo metadata` returns the same shape everywhere.
sdr-types.workspace = true
sdr-dsp.workspace = true
sdr-pipeline.workspace = true
sdr-config.workspace = true
sdr-radio.workspace = true
sdr-rtlsdr.workspace = true
sdr-source-rtlsdr.workspace = true
sdr-source-network.workspace = true
sdr-source-file.workspace = true
sdr-sink-audio.workspace = true
sdr-sink-network.workspace = true
sdr-splash.workspace = true
sdr-transcription.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow.workspace = true

[features]
# Default Linux build = Whisper-CPU transcription backend with the GTK
# frontend. The `gtk-frontend` feature is implied by every user-facing
# transcription feature (whisper-* / sherpa-cpu) so users don't have to
# remember to enable it explicitly when overriding defaults — i.e.
# `cargo build --no-default-features --features sherpa-cpu` Just Works
# instead of falling through to the no-frontend stub main.
#
# On macOS / Windows, `gtk-frontend` activates `dep:sdr-ui` which is a
# target-conditional optional dep that only resolves on Linux, so the
# activation is silently a no-op and `cargo build` produces just the
# stub `main()` from src/main.rs that points users at the macOS app.
# The transcription crate is cross-platform and still compiles.
default = ["whisper-cpu"]

# Pulls sdr-ui into the binary on Linux. On other targets the `dep:` is
# a no-op because sdr-ui is gated to `[target.'cfg(target_os = "linux")']`
# and marked optional below.
gtk-frontend = ["dep:sdr-ui"]

# Internal cfg flags. Source code uses #[cfg(feature = "whisper")] /
# #[cfg(feature = "sherpa")] to gate per-backend code. These are pulled
# in by the user-facing whisper-* / sherpa-* features below — users
# should not enable them directly. The `sdr-ui?/...` weak-feature syntax
# is required because sdr-ui is now an optional target-conditional dep;
# on macOS the forwarded sdr-ui feature is silently dropped instead of
# producing a "feature references non-existent dep" parse error.
whisper = ["sdr-transcription/whisper", "sdr-ui?/whisper"]
sherpa = ["sdr-transcription/sherpa", "sdr-ui?/sherpa"]

# User-facing build targets. Pick exactly one. Whisper and Sherpa are
# mutually exclusive at the source level (see compile_error in
# crates/sdr-transcription/src/lib.rs). Each implies `gtk-frontend` so
# the user gets a working GTK build with a single feature flag, with
# no need for `--features sherpa-cpu,gtk-frontend` etc.
#
# Whisper backend with various accelerator backends:
whisper-cpu = ["whisper", "gtk-frontend", "sdr-transcription/whisper-cpu", "sdr-ui?/whisper-cpu"]
whisper-cuda = ["whisper", "gtk-frontend", "sdr-transcription/whisper-cuda", "sdr-ui?/whisper-cuda"]
whisper-hipblas = ["whisper", "gtk-frontend", "sdr-transcription/whisper-hipblas", "sdr-ui?/whisper-hipblas"]
whisper-vulkan = ["whisper", "gtk-frontend", "sdr-transcription/whisper-vulkan", "sdr-ui?/whisper-vulkan"]
whisper-metal = ["whisper", "gtk-frontend", "sdr-transcription/whisper-metal", "sdr-ui?/whisper-metal"]
whisper-intel-sycl = ["whisper", "gtk-frontend", "sdr-transcription/whisper-intel-sycl", "sdr-ui?/whisper-intel-sycl"]
whisper-openblas = ["whisper", "gtk-frontend", "sdr-transcription/whisper-openblas", "sdr-ui?/whisper-openblas"]

# Sherpa backend — pick exactly one link mode:
#   sherpa-cpu  — CPU static link
#   sherpa-cuda — NVIDIA GPU via CUDA 12.x + cuDNN 9.x shared link (linux-x86_64 only)
sherpa-cpu = ["sherpa", "gtk-frontend", "sdr-transcription/sherpa-cpu", "sdr-ui?/sherpa-cpu"]
sherpa-cuda = ["sherpa", "gtk-frontend", "sdr-transcription/sherpa-cuda", "sdr-ui?/sherpa-cuda"]

# GTK frontend stack — Linux only. The `sdr` binary on non-Linux targets
# falls back to a stub `main()` (see src/main.rs) that prints a message
# pointing at the macOS app and exits non-zero. `sdr-ui` is marked optional
# so the features above can use the `dep:` / `?/` syntax cleanly.
[target.'cfg(target_os = "linux")'.dependencies]
sdr-ui = { workspace = true, features = ["pipewire"], optional = true }
sdr-splash-gtk.workspace = true
gtk4.workspace = true
libadwaita.workspace = true

[lints]
workspace = true

[workspace]
resolver = "3"
members = [
    ".",
    "crates/sdr-types",
    "crates/sdr-dsp",
    "crates/sdr-pipeline",
    "crates/sdr-rtlsdr",
    "crates/sdr-source-rtlsdr",
    "crates/sdr-source-network",
    "crates/sdr-server-rtltcp",
    "crates/sdr-rtltcp-discovery",
    "crates/sdr-scanner",
    "crates/sdr-source-file",
    "crates/sdr-sink-audio",
    "crates/sdr-sink-network",
    "crates/sdr-radio",
    "crates/sdr-config",
    "crates/sdr-radioreference",
    "crates/sdr-transcription",
    "crates/sdr-core",
    "crates/sdr-ffi",
    "crates/sdr-splash",
    "crates/sdr-splash-gtk",
    "crates/sdr-ui",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/jasonherald/rtl-sdr"

[workspace.dependencies]
# Internal crates
sdr-types = { path = "crates/sdr-types" }
sdr-dsp = { path = "crates/sdr-dsp" }
sdr-pipeline = { path = "crates/sdr-pipeline" }
sdr-rtlsdr = { path = "crates/sdr-rtlsdr" }
sdr-source-rtlsdr = { path = "crates/sdr-source-rtlsdr" }
sdr-source-network = { path = "crates/sdr-source-network" }
sdr-server-rtltcp = { path = "crates/sdr-server-rtltcp" }
sdr-rtltcp-discovery = { path = "crates/sdr-rtltcp-discovery" }
sdr-scanner = { path = "crates/sdr-scanner" }
sdr-source-file = { path = "crates/sdr-source-file" }
sdr-sink-audio = { path = "crates/sdr-sink-audio" }
sdr-sink-network = { path = "crates/sdr-sink-network" }
sdr-radio = { path = "crates/sdr-radio" }
sdr-config = { path = "crates/sdr-config" }
sdr-radioreference = { path = "crates/sdr-radioreference" }
sdr-transcription = { path = "crates/sdr-transcription" }
sdr-core = { path = "crates/sdr-core" }
sdr-ffi = { path = "crates/sdr-ffi" }
sdr-splash = { path = "crates/sdr-splash" }
sdr-splash-gtk = { path = "crates/sdr-splash-gtk" }
sdr-ui = { path = "crates/sdr-ui" }

# HTTP / XML (RadioReference)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
quick-xml = "0.37"

# Secure credential storage.
#
# Keyring 3.x requires an explicit backend feature per target
# OS. The defaults give you a silent **mock** backend that
# accepts writes and returns Ok but persists nothing — learned
# the hard way on PR #346 while building the RadioReference
# credentials flow on macOS. Enable both native backends so
# the same binary works on Linux and macOS:
#   * `sync-secret-service` → Linux (GNOME Keyring / KeePassXC)
#   * `apple-native`        → macOS Keychain (uses Security.framework)
keyring = { version = "3", features = ["sync-secret-service", "apple-native"] }

# Whisper speech-to-text
whisper-rs = "0.16"

# Sherpa-onnx streaming ASR.
#
# Pinned to jasonherald/sherpa-onnx fork while the `cuda` feature awaits
# upstream merge in k2-fsa/sherpa-onnx. The fork adds a `cuda` cargo
# feature that links against the CUDA 12.x + cuDNN 9.x prebuilt archive;
# everything else is upstream v1.12.36. Switch back to a crates.io
# version pin once the upstream PR is merged and released.
#
# `default-features = false` means the downstream feature set (sherpa-cpu
# or sherpa-cuda in sdr-transcription) is responsible for picking a link
# mode (static, shared, or cuda). See crates/sdr-transcription/Cargo.toml.
sherpa-onnx = { git = "https://github.com/jasonherald/sherpa-onnx.git", rev = "628c333f9851101e9d2c228a49833f21337ebf06", default-features = false }

# System directories / libc
dirs-next = "2"
libc = "0.2"

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# FFT
rustfft = "6"

# USB
rusb = "0.9"

# Audio (PipeWire on Linux)
pipewire = "0.9"

# Audio (CoreAudio / AUHAL on macOS). Spec called for 0.12, but 0.14 is
# the current maintained release; same surface, no breaking changes that
# affect us.
coreaudio-rs = "0.14"

# WAV files
hound = "3"

# mDNS-SD service discovery (_rtl_tcp._tcp.local) — pure Rust, no
# Avahi/Bonjour system dependency, no async runtime required.
mdns-sd = "0.19"

# Zero-copy type casting
bytemuck = { version = "1", features = ["derive"] }

# GTK4 / UI
gtk4 = { version = "0.11", features = ["v4_10"] }
libadwaita = { version = "0.9", features = ["v1_5"] }
cairo-rs = { version = "0.22", features = ["png"] }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow common patterns that pedantic flags unnecessarily
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Flag unwrap/panic in library code
unwrap_used = "warn"
panic = "warn"

[profile.release]
lto = true
codegen-units = 1
strip = true
