[package]
name = "sdr-core"
version = "0.1.0"
description = "Headless SDR engine — owns the DSP controller and exposes a single Rust API consumed by both the GTK frontend and the planned macOS SwiftUI app via sdr-ffi."
edition.workspace = true
license.workspace = true
repository.workspace = true

# sdr-core is the headless engine facade. It owns:
#   • the DSP controller thread (controller.rs — moved verbatim from
#     sdr-ui::dsp_controller, now consumed via the Engine struct)
#   • the source/sink instantiation that used to live inline in the GTK
#     UI's startup path
#   • the message enums (UiToDsp / DspToUi) and the SharedFftBuffer
#     primitives that both consumers (GTK now, SwiftUI via sdr-ffi later)
#     pull events through
#
# Both UI consumers depend on sdr-core. sdr-core depends on no UI code.
# It is fully cross-platform (compiles on macOS today as part of the
# workspace baseline, even though the audio sink it links is the stub
# until M3 lands the CoreAudio backend).

[dependencies]
sdr-acars.workspace = true
sdr-types.workspace = true
sdr-config.workspace = true
sdr-dsp.workspace = true
sdr-pipeline.workspace = true
sdr-radio.workspace = true
sdr-scanner.workspace = true
sdr-rtlsdr.workspace = true
sdr-source-rtlsdr.workspace = true
sdr-source-network.workspace = true
# `sdr-server-rtltcp` is pulled in for its
# `extension::Role` enum, used by the `UiToDsp::SetRtlTcpClientConfig`
# message added in #396. The role is already in the dependency
# graph transitively (via `sdr-source-network`), but naming it
# directly here lets us reference the type without going through
# the source-client's re-export chain and keeps the controller's
# type imports flat. Per #396.
sdr-server-rtltcp.workspace = true
sdr-source-file.workspace = true
sdr-sink-network.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytemuck.workspace = true
num-complex.workspace = true

# Audio sink. The base dep is unconditional so `controller.rs`'s
# `use sdr_sink_audio::AudioSink;` resolves on every target — including
# Windows / BSD / etc. that fall through to the no-backend stub. The
# target-specific entries below ADD the right backend feature on Linux
# (PipeWire) and macOS (CoreAudio); Cargo merges per-target dep entries
# into the base dep, so on Linux the effective entry is
# `sdr-sink-audio = { ..., features = ["pipewire"] }`, on macOS it's
# `["coreaudio"]`, and on every other target the feature list is empty
# and the crate's `lib.rs` cfg dispatch resolves to the stub backend.
sdr-sink-audio.workspace = true
sdr-transcription.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
sdr-sink-audio = { workspace = true, features = ["pipewire"] }

[target.'cfg(target_os = "macos")'.dependencies]
sdr-sink-audio = { workspace = true, features = ["coreaudio"] }

[dev-dependencies]
arrayvec = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
