[package]
name = "sdr-dsp"
version = "0.1.0"
description = "Pure DSP library: math, filters, FFT, demodulation, resampling"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sdr-types.workspace = true
rustfft.workspace = true
serde.workspace = true
thiserror.workspace = true
# GPU FFT backend (epic #452 phase 2 / #179). Behind the same
# `FftEngine` trait as `RustFftEngine`. `pollster` drives the async
# wgpu readback to completion on the sync trait surface.
wgpu.workspace = true
pollster.workspace = true
# bytemuck gets us zero-copy `Complex` ↔ `f32` slice casts for the
# GPU upload / readback path — the same layout-identity we rely on
# in the rustfft path, expressed safely.
bytemuck.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
# Benchmark harness for the GPU-acceleration epic (#452).
# Phase-1 baseline suite measures the CPU implementations of FFT,
# FIR filtering, waterfall colormap lookup, and energy detection so
# every subsequent GPU sub-ticket has a fixed comparison surface.
criterion.workspace = true

[lints]
workspace = true

# ─── Benchmarks (epic #452 phase 1) ──────────────────────────
# `harness = false` tells cargo to skip the default libtest harness
# so Criterion's own entrypoint (`criterion_group!` + `criterion_main!`)
# takes over. Missing this is the usual "why does `cargo bench` do
# nothing useful" trap.

[[bench]]
name = "fft"
harness = false

# GPU companion to the CPU FFT bench (epic #452 phase 2 / #179).
# Uses the same `FftEngine::forward` surface, same sizes, same
# `iter_batched` + `black_box` discipline so the numbers are
# directly comparable against `fft`.
[[bench]]
name = "fft_gpu"
harness = false

[[bench]]
name = "fir"
harness = false

[[bench]]
name = "colormap"
harness = false

[[bench]]
name = "detection"
harness = false
