[package]
name = "sdr-dsp"
version = "0.1.0"
description = "Pure DSP library: math, filters, FFT, demodulation, resampling"
edition.workspace = true
license.workspace = true
repository.workspace = true
# Exclude the APT integration-test fixtures from `cargo package` so a
# `crates.io` publish doesn't ship the GPL-3-licensed WAV files
# from noaa-apt's test corpus. The README.md stays out too — it
# only documents the fixtures' provenance, no use post-publish.
# Per CR round 1 on PR #571.
exclude = ["tests/data/**"]

[dependencies]
sdr-types.workspace = true
rustfft.workspace = true
serde.workspace = true
thiserror.workspace = true
# GPU FFT backend (epic #452 phase 2 / #179). Behind the same
# `FftEngine` trait as `RustFftEngine`. `pollster` drives the async
# wgpu readback to completion on the sync trait surface.
wgpu.workspace = true
pollster.workspace = true
# bytemuck gets us zero-copy `Complex` ↔ `f32` slice casts for the
# GPU upload / readback path — the same layout-identity we rely on
# in the rustfft path, expressed safely.
bytemuck.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
# Benchmark harness for the GPU-acceleration epic (#452).
# Phase-1 baseline suite measures the CPU implementations of FFT,
# FIR filtering, waterfall colormap lookup, and energy detection so
# every subsequent GPU sub-ticket has a fixed comparison surface.
criterion.workspace = true
# WAV reader for the APT integration test, which feeds a real NOAA
# 19 capture (sourced from the noaa-apt project's test/ corpus,
# GPL-3.0 — see `tests/data/README.md`) through the decoder and
# asserts that recognizable APT lines come out the other end.
hound.workspace = true

[lints]
workspace = true

# ─── Benchmarks (epic #452 phase 1) ──────────────────────────
# `harness = false` tells cargo to skip the default libtest harness
# so Criterion's own entrypoint (`criterion_group!` + `criterion_main!`)
# takes over. Missing this is the usual "why does `cargo bench` do
# nothing useful" trap.

[[bench]]
name = "fft"
harness = false

# Scalar-vs-AVX2 comparison bench for the CPU FFT investigation
# under epic #452. Measures rustfft's own internal scalar and
# AVX2 kernel paths side-by-side on the same host. Not part of
# the production FFT hot path — purely diagnostic.
[[bench]]
name = "fft_simd_compare"
harness = false

# Multirate DSP — `PowerDecimator` and `RationalResampler` at
# live-pipeline-realistic shapes. Added during the epic #452 CPU
# investigation because the existing `fir` bench doesn't reflect
# how the channel filter actually runs (post-resample, not at
# full rate).
[[bench]]
name = "multirate"
harness = false

# GPU companion to the CPU FFT bench (epic #452 phase 2 / #179).
# Uses the same `FftEngine::forward` surface, same sizes, same
# `iter_batched` + `black_box` discipline so the numbers are
# directly comparable against `fft`.
[[bench]]
name = "fft_gpu"
harness = false

[[bench]]
name = "fir"
harness = false

[[bench]]
name = "colormap"
harness = false

[[bench]]
name = "detection"
harness = false

# LRPT QPSK demod throughput (epic #469 stage 1). Measures the
# end-to-end demod chain on 1 second of synthetic 144 ksps input —
# the perf floor for stage-1 regression detection.
[[bench]]
name = "lrpt_demod"
harness = false
