[package]
name = "sdr-lrpt"
version = "0.1.0"
description = "Meteor-M LRPT post-demod decoder: FEC, CCSDS framing, image assembly"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sdr-dsp.workspace = true
sdr-types.workspace = true
bytemuck.workspace = true
thiserror.workspace = true
tracing.workspace = true
# Replay binary only — gate behind `[[bin]]` if this gets
# heavyweight, but the env-filter feature keeps it lean.
tracing-subscriber.workspace = true
# PNG export for the per-channel + composite outputs. Local dep
# rather than workspace because no other crate uses it yet; hoist
# to workspace.dependencies if a second consumer arrives.
image = { version = "0.25", default-features = false, features = ["png"] }

[dev-dependencies]
proptest = "1"
criterion.workspace = true

[lints]
workspace = true

# Benchmarks for stage-2a FEC chain (Viterbi + sync + derand). Sets
# the per-stage performance floor for regression detection.
[[bench]]
name = "fec"
harness = false

# End-to-end IQ → image replay binary. Takes a captured IQ file
# (complex<f32> interleaved at sdr_dsp::lrpt::SAMPLE_RATE_HZ),
# drives the full LrptPipeline, and saves per-channel PNGs.
[[bin]]
name = "sdr-lrpt-replay"
path = "src/bin/replay.rs"
