[package]
name = "sdr-pipeline"
version = "0.1.0"
description = "Threading, streaming, and signal path management"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sdr-types.workspace = true
sdr-dsp.workspace = true
sdr-config.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
