[package]
name = "sdr-radio"
version = "0.1.0"
description = "Radio decoder — demodulator selection, IF/AF chains, mode switching"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sdr-types.workspace = true
sdr-dsp.workspace = true
sdr-lrpt.workspace = true
sdr-pipeline.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
slowrx.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
