[package]
name = "sdr-radioreference"
version = "0.1.0"
description = "RadioReference.com SOAP API client"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sdr-types.workspace = true
reqwest.workspace = true
quick-xml.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true

[lints]
workspace = true
